# peruse

./: README.md  pyproject.toml
examples/: test_browser.py
peruse/: __init__.py  agent.py  browser.py  llm.py  models.py  utils.py
